sql/item.h
@@ -3366,7 +3366,7 @@ public:
   friend bool insert_fields(THD *thd, Name_resolution_context *context,
                             const char *db_name,
                             const char *table_name, List_iterator<Item> *it,
-                            bool any_privileges);
+                            bool any_privileges, bool returning_field);
 };
 
 
